gcc/testsuite/sarif-replay.dg/2.1.0-invalid/3.13.4-bad-runs.sarif
{ "version": "2.1.0",
  "runs": 42 } // { dg-error "expected sarifLog.runs to be 'null' or an array \\\[SARIF v2.1.0 ยง3.13.4\\\]" }

/* { dg-begin-multiline-output "" }
    2 |   "runs": 42 }
      |           ^~
   { dg-end-multiline-output "" } */
